syntax = "proto3";

option csharp_namespace = "yuapi_OcelotGateway";

package userinfo;

service UserInfo  {
    rpc GetUserInfo  (UserInfoRequest) returns (UserInfoResponse);
}

message UserInfoRequest {
    string accessKey = 1;
}

message UserInfoResponse  {
    int32 id = 1;
    string userName = 2;
    string userAccount = 3;
}
